# tiny_binary_debugger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.sh  entitlements.plist
examples/: complex  complex.c  fast_test.c  hello.py  slow_hello.py  test_calls.c  vulnerable.c
src/: main.rs  tui.rs
src/launcher/: mod.rs
src/server/: mod.rs
src/stats/: mod.rs
src/storage/: mod.rs
src/tracer/: mach.rs  mod.rs  trace.rs
tests/: cli.rs
web/: index.html
