[package]
name = "tdb"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "ptrace"] }
mach2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
capstone = "0.12"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
