[package]
name = "tdb"
version = "0.2.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "ptrace"] }
mach2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
capstone = "0.12"
parking_lot = "0.12"
ctrlc = "3.4"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
